tests/ui/simd/intrinsic/generic-shuffle.stderr
error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: simd_shuffle index must be a SIMD vector of `u32`, got `[u32; 2]`
  --> $DIR/generic-shuffle.rs:22:31
   |
LL |         let _: Simd<u32, 2> = simd_shuffle(v, v, const { [0u32; 2] });
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: expected return type of length 2, found `Simd<u32, 4>` with length 4
  --> $DIR/generic-shuffle.rs:25:31
   |
LL |         let _: Simd<u32, 4> = simd_shuffle(v, v, I);
   |                               ^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: expected return element type `u32` (element of input `Simd<u32, 4>`), found `Simd<f32, 2>` with element type `f32`
  --> $DIR/generic-shuffle.rs:28:31
   |
LL |         let _: Simd<f32, 2> = simd_shuffle(v, v, I);
   |                               ^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: simd_shuffle index must be a SIMD vector of `u32`, got `Simd<f32, 2>`
  --> $DIR/generic-shuffle.rs:31:31
   |
LL |         let _: Simd<u32, 2> = simd_shuffle(v, v, I2);
   |                               ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0511`.
